--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "cors": "^2.8.5",
-  "express": "^4.17.1"
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.17.1"
+  }
 }
